compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn y() -> String {
  "\u{79}"
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) parseEscape;
  
  y = { }: "${parseEscape "\\U00000079"}";
in
{ inherit y; }
