compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__const_concat_multiple.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nconst cute = \"cute\"\nconst cute_bee = cute <> \"bee\"\nconst cute_cute_bee_buzz = cute <> cute_bee <> \"buzz\"\npub fn main() {\n  cute_cute_bee_buzz\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

const cute = "cute"
const cute_bee = cute <> "bee"
const cute_cute_bee_buzz = cute <> cute_bee <> "buzz"
pub fn main() {
  cute_cute_bee_buzz
}


----- COMPILED NIX
let
  cute = "cute";
  
  cute_bee = cute + "bee";
  
  cute_cute_bee_buzz = cute + (cute_bee + "buzz");
  
  main = { }: cute_cute_bee_buzz;
in
{ inherit main; }
