compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__equality.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go(a) {\n  a == \"ok\"\n  a != \"ok\"\n  a == a\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  go = a: let _' = a == "ok"; _'1 = a != "ok"; in seqAll [ _' _'1 ] (a == a);
in { }
