compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__string_literals.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go() {\n  \"Hello, Gleam!\"\n}\n"
---
let go = { }: "Hello, Gleam!"; in { }
