compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__string_patterns.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go(x) {\n  let assert \"Hello\" = x\n}\n"
snapshot_kind: text
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
    if x != "Hello" then
      builtins.throw
        (makeError
          "let_assert"
          "my/mod"
          3
          "go"
          "Pattern match failed, no pattern matched the value."
          { value = x; })
    else x;
in
{ }
