compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__string_prefix_assignment.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as greeting <> name -> greeting\n    _ -> \"Unknown\"\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) strHasPrefix;
  
  go =
    x:
      if strHasPrefix "Hello, " x then
        let
          name = (builtins.substring 7 (-1) x);
          greeting = "Hello, ";
        in greeting
      else "Unknown";
in { inherit go; }
