compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__strings__string_prefix_assignment_with_multiple_subjects.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"1\" as prefix <> _ | \"11\" as prefix <> _ -> prefix\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "1" as prefix <> _ | "11" as prefix <> _ -> prefix
    _ -> "Unknown"
  }
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) strHasPrefix;
  
  go =
    x:
    if strHasPrefix "1" x then let prefix = "1"; in prefix
    else if strHasPrefix "11" x then let prefix = "11"; in prefix
    else "Unknown";
in
{ inherit go; }
